# Design-Patterns-Case-Study

./: .buildinfo  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  GoF.md  README.md  abstract_factory_api.html  abstractfactory_pattern.gen.html  adapter_api.html  adapter_pattern.gen.html  behavioral_patterns.gen.html  bridge_api.html  bridge_pattern.gen.html  build.gradle  builder_api.html  builder_pattern.gen.html  chain_of_responsibility_api.html  chainofresponsibility_pattern.gen.html  command_api.html  command_pattern.gen.html  composite_api.html  composite_pattern.gen.html  cpp_api_index.gen.html  creational_patterns.gen.html  decorator_api.html  decorator_pattern.gen.html  facade_api.html  facade_pattern.gen.html  factory_method_api.html  factorymethod_pattern.gen.html  flyweight_api.html  flyweight_pattern.gen.html  genindex.html  gof.gen.html  index.html  interpreter_api.html  interpreter_pattern.gen.html  introduction.gen.html  iterator_api.html  (+31 more)
Behavioral/: README.md  behavioral_patterns.gen.html  chain__of__responsibility_8hpp.gen.html  classConsoleOutput.gen.html  classMediatorTest.gen.html  classOutputCapture.gen.html  classTestObserver.gen.html  classchain__of__responsibility__pattern_1_1AbstractHandler.gen.html  classchain__of__responsibility__pattern_1_1ConcreteHandlerA.gen.html  classchain__of__responsibility__pattern_1_1ConcreteHandlerB.gen.html  classchain__of__responsibility__pattern_1_1Handler.gen.html  classcommand__pattern_1_1Command.gen.html  classcommand__pattern_1_1ConcreteCommand.gen.html  classcommand__pattern_1_1Invoker.gen.html  classcommand__pattern_1_1Receiver.gen.html  classinterpreter__pattern_1_1And.gen.html  classinterpreter__pattern_1_1Constant.gen.html  classinterpreter__pattern_1_1Expression.gen.html  classinterpreter__pattern_1_1Not.gen.html  classinterpreter__pattern_1_1Or.gen.html  classinterpreter__pattern_1_1Variable.gen.html  classiterator__pattern_1_1Aggregate.gen.html  classiterator__pattern_1_1ConcreteAggregate.gen.html  classiterator__pattern_1_1ConcreteIterator.gen.html  classiterator__pattern_1_1Iterator.gen.html  classmediator__pattern_1_1Colleague.gen.html  classmediator__pattern_1_1ConcreteColleague.gen.html  classmediator__pattern_1_1ConcreteMediator.gen.html  classmediator__pattern_1_1Mediator.gen.html  classmemento__pattern_1_1Caretaker.gen.html  classmemento__pattern_1_1Memento.gen.html  classmemento__pattern_1_1Originator.gen.html  classobserver__pattern_1_1ConcreteObserver.gen.html  classobserver__pattern_1_1ConcreteSubject.gen.html  classobserver__pattern_1_1Observer.gen.html  classobserver__pattern_1_1Subject.gen.html  classstate__pattern_1_1ConcreteStateA.gen.html  classstate__pattern_1_1ConcreteStateB.gen.html  classstate__pattern_1_1Context.gen.html  classstate__pattern_1_1State.gen.html  (+47 more)
Creational/: README.md  abstract__factory_8cpp.gen.html  abstract__factory_8hpp.gen.html  builder_8cpp.gen.html  builder_8hpp.gen.html  classabstract__factory__pattern_1_1AbstractFactory.gen.html  classabstract__factory__pattern_1_1AbstractProductA.gen.html  classabstract__factory__pattern_1_1AbstractProductB.gen.html  classabstract__factory__pattern_1_1ConcreteFactory1.gen.html  classabstract__factory__pattern_1_1ConcreteFactory2.gen.html  classabstract__factory__pattern_1_1ConcreteProductA1.gen.html  classabstract__factory__pattern_1_1ConcreteProductA2.gen.html  classabstract__factory__pattern_1_1ConcreteProductB1.gen.html  classabstract__factory__pattern_1_1ConcreteProductB2.gen.html  classbuilder__pattern_1_1Builder.gen.html  classbuilder__pattern_1_1ConcreteBuilder.gen.html  classbuilder__pattern_1_1Director.gen.html  classbuilder__pattern_1_1Product.gen.html  classfactory__method__pattern_1_1ConcreteCreatorA.gen.html  classfactory__method__pattern_1_1ConcreteCreatorB.gen.html  classfactory__method__pattern_1_1ConcreteProductA.gen.html  classfactory__method__pattern_1_1ConcreteProductB.gen.html  classfactory__method__pattern_1_1Creator.gen.html  classfactory__method__pattern_1_1Product.gen.html  classobject__pool__pattern_1_1ConcreteReusable.gen.html  classobject__pool__pattern_1_1ObjectPool.gen.html  classobject__pool__pattern_1_1Reusable.gen.html  classprototype__pattern_1_1ConcretePrototype1.gen.html  classprototype__pattern_1_1ConcretePrototype2.gen.html  classprototype__pattern_1_1Prototype.gen.html  classsingleton__pattern_1_1Singleton.gen.html  concrete__reusable_8cpp.gen.html  concrete__reusable_8hpp.gen.html  creational_patterns.gen.html  factory__method_8cpp.gen.html  factory__method_8hpp.gen.html  namespaceabstract__factory__pattern.gen.html  namespacebuilder__pattern.gen.html  namespacefactory__method__pattern.gen.html  namespaceobject__pool__pattern.gen.html  (+14 more)
Structural/: README.md  bridge_8cpp.gen.html  bridge_8hpp.gen.html  classAdapterPatternTest.gen.html  classClassAdapterTest.gen.html  classOutputCapturer.gen.html  class__adapter_8hpp.gen.html  classbridge__pattern_1_1Abstraction.gen.html  classbridge__pattern_1_1ConcreteImplementorA.gen.html  classbridge__pattern_1_1ConcreteImplementorB.gen.html  classbridge__pattern_1_1Implementor.gen.html  classbridge__pattern_1_1RefinedAbstraction.gen.html  classclass__adapter__pattern_1_1Adaptee.gen.html  classclass__adapter__pattern_1_1Adapter.gen.html  classclass__adapter__pattern_1_1Target.gen.html  classcomposite__pattern_1_1Component.gen.html  classcomposite__pattern_1_1Composite.gen.html  classcomposite__pattern_1_1Leaf.gen.html  classdecorator__pattern_1_1Component.gen.html  classdecorator__pattern_1_1ConcreteComponent.gen.html  classdecorator__pattern_1_1ConcreteDecoratorA.gen.html  classdecorator__pattern_1_1ConcreteDecoratorB.gen.html  classdecorator__pattern_1_1Decorator.gen.html  classfacade__pattern_1_1Facade.gen.html  classfacade__pattern_1_1Subsystem1.gen.html  classfacade__pattern_1_1Subsystem2.gen.html  classfacade__pattern_1_1Subsystem3.gen.html  classflyweight__pattern_1_1ConcreteFlyweight.gen.html  classflyweight__pattern_1_1Flyweight.gen.html  classflyweight__pattern_1_1FlyweightFactory.gen.html  classproxy__pattern_1_1Proxy.gen.html  (+28 more)
(+728 files in other folders)
